# welcometotheclubbuddy-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
src/: _docker_stub.py
src/shared/: __about__.py
src/shared/config/: factory.py  models.py
src/shared/interfaces/: asyncio.py  json.py
src/shared/tools/: choicelib.py  taskmanager.py
src/shared/utils/: logging.py  modules.py  pydantic.py  python.py  sentry.py
src/shared/utils/jinja/: factory.py  utils.py
src/shared/utils/jinja/loaders/: stub.py
src/telegram_bot/: __init__.py  __main__.py  common.py
src/telegram_bot/handlers/: __init__.py
src/telegram_bot/handlers/common/: __init__.py  callback.py  error.py  start.py
src/telegram_bot/handlers/common/chat/: __init__.py  member.py
src/telegram_bot/keyboards/: add_to_chat.py  delete_message.py
src/telegram_bot/middlewares/request/: retry_request.py
src/telegram_bot/utils/aiogram/: commands.py  event_context.py
src/telegram_bot/utils/aiogram/factory/: bot.py  config.py  dispatcher.py  webhook.py
src/telegram_bot/utils/aiogram/specific_error/: exceptions.py  middleware.py
