[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "welcometotheclubbuddy-bot"
version = "0.1.0"
description = "An inimitable and unique bot that will greet your fucking slaves when they join to chat."
authors = ["hilorioze"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "shared", from = "src" },
    { include = "telegram_bot", from = "src" },

    { include = "_docker_stub.py", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4"

jinja2 = "^3.1.3"

aiogram = "^3.5.0"
sulguk = "^0.7.0"

pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"

python-dotenv = "^1.0.1"

sentry-sdk = "^2.0.1"

uvloop = {version = "^0.19.0", optional = true, markers = "sys_platform != 'win32' and sys_platform != 'cygwin' and sys_platform != 'cli'"}
aiodns = {version = ">=3.0.0", optional = true}
brotli = {version = "^1.1.0", optional = true, markers = "implementation_name == 'cpython'"}
brotlicffi = {version = "^1.1.0.0", optional = true, markers = "implementation_name != 'cpython'"}

[tool.poetry.extras]
speedups = ["orjson", "uvloop", "aiodns", "brotli", "brotlicffi"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

pre-commit = "^3.6.0"

nest-asyncio = "^1.5.7"

black = "^24.2.0"
ruff = "^0.4.9"
mypy = ">=0.930"

[tool.black]
line-length = 99
target-version = ['py311']

[tool.ruff]
line-length = 99
target-version = "py311"
src = ["src", ]
show-fixes = true
output-format = "concise"
respect-gitignore = true

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "A",        # flake8-builtins
    "ANN",      # flake8-annotations
    "FBT",      # flake8-boolean-trap
    "TD",       # flake8-todos
    "FIX",      # flake8-fixme
    "SLF",      # flake8-self
    "D",        # pydocstyle
    "C90",      # mccabe
    "PLR09",    # pylint09 - Too many*
    "E501",     # Line too long ({width} > {limit} characters)
    "EXE002",   # The file is executable but no shebang is present
    "ERA001",   # Found commented-out code
    "RET504",   # Unnecessary assignment to {name} before return statement
    "INP001",   # File {filename} is part of an implicit namespace package. Add an __init__.py.
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_no_return = true
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
